force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>Rc-{0000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>