force-app/main/default/objects/Receipt__c/fields/Cheque_Date_Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Date_Data_Upload__c</fullName>
    <label>Cheque_Date_Data_Upload</label>
    <type>Date</type>
</CustomField>