force-app/main/default/objects/Receipt__c/fields/Cheque_no_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_no_Transaction_Number__c</fullName>
    <label>Cheque no / Transaction Number</label>
    <length>220</length>
    <type>Text</type>
</CustomField>