force-app/main/default/objects/Receipt__c/fields/Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Receipt that was created via historical Data Loader upload (header only, no line items). Processed by HistoricalReceiptLineItemBatch.</description>
    <label>Data Upload</label>
    <type>Checkbox</type>
</CustomField>