force-app/main/default/objects/Receipt__c/fields/Line_Items_Created__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by HistoricalReceiptLineItemBatch once the Receipt Line Items have been generated for this uploaded Receipt. Prevents double-processing.</description>
    <label>Line Items Created</label>
    <type>Checkbox</type>
</CustomField>