force-app/main/default/objects/Receipt__c/fields/Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_Id__c</fullName>
    <formula>Booking__r.Owner_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email Id</label>
    <type>Text</type>
</CustomField>