force-app/main/default/objects/Receipt__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <formula>IF(TDS_Refund_Amount__c &gt; 0, &apos;Refund&apos;,
    IF(Total_Received_Amount__c &gt; 0, &apos;Credit&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>