force-app/main/default/objects/Receipt__c/fields/Receipt_Amount_Without_Tds__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount_Without_Tds__c</fullName>
    <label>Receipt Amount Without Tds</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>TDS</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>