force-app/main/default/objects/Receipt__c/fields/Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No__c</fullName>
    <displayFormat>Rc-{0000}</displayFormat>
    <label>Receipt No.</label>
    <type>AutoNumber</type>
</CustomField>