force-app/main/default/objects/Receipt__c/fields/Receipt_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Payment_Type__c</fullName>
    <label>Receipt Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Type</valueSetName>
    </valueSet>
</CustomField>