force-app/main/default/objects/Receipt__c/fields/Received_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Interest_Amount__c</fullName>
    <label>Received Interest Amount</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Interest</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>